WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117301
[curl] Handling of blob elements is incorrect
https://bugs.webkit.org/show_bug.cgi?id=117301
Summary
[curl] Handling of blob elements is incorrect
Peter Gal
Reported
2013-06-06 08:38:26 PDT
Handling of blob elements in the form data is not really supported by the current curl network backend implementation.
Attachments
proposed patch
(1.88 KB, patch)
2013-06-06 09:08 PDT
,
Peter Gal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2013-06-06 09:08:48 PDT
Created
attachment 203940
[details]
proposed patch With this patch the blob data is resolved and can now be handled by the existing code paths.
WebKit Commit Bot
Comment 2
2013-06-08 04:34:27 PDT
Comment on
attachment 203940
[details]
proposed patch Clearing flags on attachment: 203940 Committed
r151346
: <
http://trac.webkit.org/changeset/151346
>
WebKit Commit Bot
Comment 3
2013-06-08 04:34:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug