[curl] Handling of blob elements is incorrect https://bugs.webkit.org/show_bug.cgi?id=117301

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2013-06-08
Reviewed by Kenneth Rohde Christiansen.

No new tests, covered by existing ones:
http/tests/fileapi/xhr-send-form-data-filename-escaping.html
http/tests/fileapi/xhr-send-form-data-mimetype-normalization.html

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::getFormElementsCount): Resolve Blob elements.

Canonical link: https://commits.webkit.org/135606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151346 268f45cc-cd09-0410-ab3c-d52691b4dbfc